--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,4 @@
 include LICENSE.txt
 include MANIFEST.in
-recursive-include ecfit/data *
+recursive-include unsatfit/data *
 global-exclude *.pyc *~ *,bak *,swp *.pyo
