--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -6,20 +6,17 @@ FROM python:3-slim-bookworm
 
 # Basic system
 USER root
-RUN apt update
-RUN apt upgrade -y
+RUN apt update && apt upgrade -y
 
 # Setup Apache
-RUN apt install -y apache2
-RUN apt clean
-COPY ./apache2.conf /etc/apache2/apache2.conf
-RUN ln -s ../mods-available/cgi.load /etc/apache2/mods-enabled/cgi.load
-RUN ln -s ../mods-available/rewrite.load /etc/apache2/mods-enabled/rewrite.load
+RUN apt install -y apache2 && apt clean && \
+    ln -s ../mods-available/cgi.load /etc/apache2/mods-enabled/ && \
+    ln -s ../mods-available/rewrite.load /etc/apache2/mods-enabled/
+COPY ./apache2.conf /etc/apache2/
 
 # SWRC Fit
-RUN pip3 install unsatfit
-RUN pip3 cache purge
-RUN ln -s /usr/local/bin/python3 /usr/bin/python3
+RUN pip3 install unsatfit && pip3 cache purge && \
+    ln -s /usr/local/bin/python3 /usr/bin/python3
 
 # Run Apache
 EXPOSE 80
