--- a/docker/apache2.conf
+++ b/docker/apache2.conf
@@ -5,8 +5,8 @@ Timeout 300
 KeepAlive On
 MaxKeepAliveRequests 100
 KeepAliveTimeout 5
-User ${APACHE_RUN_USER}
-Group ${APACHE_RUN_GROUP}
+User www-data
+Group www-data
 HostnameLookups Off
 ErrorLog ${APACHE_LOG_DIR}/error.log
 LogLevel warn
