--- a/.gitignore
+++ b/.gitignore
@@ -22,8 +22,7 @@ wheels/
 *.egg
 MANIFEST
 # Debian package
-deb_dist/unsatfit*
-unsatfit-*.tar.gz
+deb_dist/
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
