--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ wheels/
 MANIFEST
 # Debian package
 deb_dist/
+unsatfit-*.tar.gz
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
