Fixed a bug in parameter counting. Now const=[wrf, f'Ks={ks}'] is available.

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,8 @@ wheels/
 MANIFEST
 # Debian package
 deb_dist/
-unsatfit-*.tar.gz
+unsatfit*.tar.gz
+unsatfit*.deb
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
